k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psfn
  labels:
    app.kubernetes.io/part-of: psfn
